Changed discrete data visualisation

--- a/churn-prediction.ipynb
+++ b/churn-prediction.ipynb
@@ -369,7 +369,7 @@
    "id": "7f7eef1a",
    "metadata": {},
    "source": [
-    "## Data processing and visualisation"
+    "## Discrete data processing and visualisation"
    ]
   },
   {
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29b79da0",
+   "id": "78b5af48",
    "metadata": {},
    "source": [
     "From the above bar graphs we can see that:\n",
@@ -489,7 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "58ae1b6a",
+   "id": "cc301a98",
    "metadata": {
     "scrolled": true
    },
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "409ea96c",
+   "id": "ae15c6e1",
    "metadata": {},
    "source": [
     "From the above heatmap we can see that:\n",
@@ -527,12 +527,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "50d2fc24",
+   "metadata": {},
+   "source": [
+    "# Continuous data processing and visualisation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28760cb2",
-   "metadata": {
-    "scrolled": false
-   },
+   "id": "892d25a8",
+   "metadata": {},
    "outputs": [],
    "source": []
   }
